<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_phone_info"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/phone_info" />
        <item
            android:id="@+id/nav_current_network"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/current_network_info" />
        <item
            android:id="@+id/nav_base_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/base_map" />
        <item
            android:id="@+id/nav_detected_cells"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/detected_cells_info" />
    </group>

    <item android:title="@string/other_info">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
